# e2e-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: fr-two-refactor.md
examples/: fr-two.e2e-ai.yml  user-config.yml
monitor-ui/: README.md  index.html  package.json  vite.config.js
monitor-ui/src/: App.jsx  api.js  main.jsx
scripts/: check_release_version.py
src/e2e_ai/: __init__.py  __main__.py  cli.py  errors.py  loop.py  models.py  planner.py  release.py
src/e2e_ai/agents/: __init__.py  base.py  builtins.py  capabilities.py  cli_agent.py  errors.py  health.py  implementation_result.py  invocation.py  model_catalog.py  progress.py  quota.py  registry.py  role_agent.py  router.py  routing_outcomes.py  schemas.py
src/e2e_ai/analysis/: __init__.py  attachments.py  context.py  failure_packet.py  instrumentation.py  patches.py  signatures.py  store.py  text.py  worktree.py
src/e2e_ai/config/: __init__.py  defaults.py  detect.py  loader.py  models.py  scaffold.py  schema.py  target.py  validation.py
src/e2e_ai/db/: __init__.py  connection.py  migrations.py  schema.sql
src/e2e_ai/docker/: __init__.py  postgres.py
src/e2e_ai/integrations/: __init__.py
src/e2e_ai/inventory/: __init__.py  models.py  playwright_list.py  store.py
src/e2e_ai/isolation/: __init__.py  base.py  docker_compose.py  docker_postgres.py  models.py  none.py  ports.py  registry.py
src/e2e_ai/mcp/: __init__.py  artifacts.py  client_configs.py  config.py  health.py  models.py  playwright.py  policy.py  sessions.py
src/e2e_ai/monitor/: __init__.py  api.py  commands.py  models.py  processes.py  server.py  store.py
src/e2e_ai/orchestrator/: __init__.py  decisions.py  loop.py  models.py  prompts.py  state_machine.py  store.py
src/e2e_ai/repair/: __init__.py  stale_runs.py  store.py
src/e2e_ai/runner/: __init__.py  artifacts.py  commands.py  models.py  playwright.py  results.py  store.py  subprocess.py
src/e2e_ai/runtime/: __init__.py  base.py  docker_compose.py  health.py  models.py  none.py  refresh.py  registry.py  session.py  store.py
tests/: agent_progress_test.py  agents_test.py  analysis_test.py  cli_default_repair_test.py  cli_init_test.py  cli_verify_cleanup_test.py  config_test.py  db_test.py  failover_test.py  inventory_test.py  isolation_test.py  live_agents_test.py  loop_test.py  mcp_test.py  model_catalog_test.py  monitor_test.py  orchestrator_store_test.py  orchestrator_test.py  release_test.py  repair_store_test.py  runner_test.py  runtime_refresh_test.py  runtime_test.py  stale_runs_test.py  worktree_test.py
tests/fixtures/fr_two/: playwright-results-failed.json  playwright-shards-manifest.json
tests/integrations/: fr_two_test.py
(+18 files in other folders)
