[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2e-ai"
version = "0.1.3"
description = "AI-driven loop that runs Playwright e2e tests and fixes failures until green"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nicu Tofan" }]
keywords = ["playwright", "e2e", "testing", "ai", "agents"]
dependencies = [
    "attrs>=24.0",
    "click>=8.1",
    "platformdirs>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    # Required by fastapi.testclient / starlette.testclient for the monitor tests.
    "httpx>=0.27",
]
monitor = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
e2e-ai = "e2e_ai.cli:main"

[project.entry-points."e2e_ai.agents"]
claude = "e2e_ai.agents.builtins:CLAUDE"
codex = "e2e_ai.agents.builtins:CODEX"
cursor = "e2e_ai.agents.builtins:CURSOR"

[tool.hatch.build.targets.wheel]
packages = ["src/e2e_ai"]
# The bundled monitor UI assets live inside the package and ship by default.
# Ensure they are not treated as build artifacts to exclude.
artifacts = ["src/e2e_ai/monitor/static/**"]

[tool.distlift]
language = "python"
mode = "simple"
version_source = "manifest"
manifest_path = "pyproject.toml"
tag_template = "v{version}"
remotes = ["origin"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are called in argument defaults by design.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Depends",
]
